--- a/src/scss/reusable.scss
+++ b/src/scss/reusable.scss
@@ -15,15 +15,19 @@ $grey-text-color: rgba(127, 127, 127, 0.8);
 }
 %list-pagination {
   position:absolute;
-  top: -35px;
-  right: 0;
-  
+  display: inline-block;
+  right: 1em;
   text-align: left;
+  margin: 0;
+  .prev, .next {
+    list-style: none;
+    display: inline-block;
+  }
   .prev {
-    float:none;
+
   }
   .next {
-    float: none;
+   
   }
 }
 
