--- a/src/scss/reusable.scss
+++ b/src/scss/reusable.scss
@@ -14,9 +14,9 @@ $grey-text-color: rgba(127, 127, 127, 0.8);
   margin-bottom: 1em;
 }
 %list-pagination {
-  position:absolute;
+  float: right;
   display: inline-block;
-  right: 1em;
+  padding-right: 1em;
   text-align: left;
   margin: 0;
   .prev, .next {
